--- a/srcs/Docker-compose.yml
+++ b/srcs/Docker-compose.yml
@@ -7,14 +7,13 @@ services:
     networks:
     - inception # à quel network il appartient
     build: 
-      context: ./requirements/mariadb 	# ou se trouve son Dockerfile
-      dockerfile: Dockerfile			# le nom du Dockerfile ?!
-    env_file: .env                  # le fichier d'environnement pour transmettre les variables
-    volumes:                        # Voir plus bas
-    - /Users/avaganay/data/mariadb:/var/lib/mysql:rw
-    # - mariadb:/var/lib/mysql
-    restart: unless-stopped         # redémarre tant qu'il n'est pas stoppé 
-    expose:                         # le port à exposer
+      context: ./requirements/mariadb # ou se trouve son Dockerfile
+      dockerfile: Dockerfile  # le nom du Dockerfile ?!
+    env_file: .env  # le fichier d'environnement pour transmettre les variables
+    volumes:  # Voir plus bas
+    - /Users/avaganay/data/mariadb:/var/lib/mysql:rw  # - mariadb:/var/lib/mysql
+    restart: unless-stopped # redémarre tant qu'il n'est pas stoppé 
+    expose: # le port à exposer
     - "3306"
 
   nginx:
@@ -23,15 +22,15 @@ services:
     - wordpress:/var/www/wordpress:rw
     networks:
     - inception
-    depends_on:        			 # Nouvelle ligne, indiquant de ne pas démarrer NGINX tant que WordPress n'a pas démarré.
+    depends_on: # Nouvelle ligne, indiquant de ne pas démarrer NGINX tant que WordPress n'a pas démarré.
     - wordpress
     build: 
       context: ./requirements/nginx
       dockerfile: Dockerfile
     env_file: .env
     ports:
-    - "443:443" 		# on indique le port qui sera exposé a la machine locale
-    restart: on-failure 		# Ici nous changeons, le container redémarrera uniquement en cas de crash.
+    - "443:443" # on indique le port qui sera exposé a la machine locale
+    restart: on-failure # Ici nous changeons, le container redémarrera uniquement en cas de crash.
 
   wordpress:
     container_name: wordpress
@@ -43,7 +42,7 @@ services:
       context: ./requirements/wordpress
       dockerfile: Dockerfile
     env_file: .env
-    depends_on:    					# WordPress démarrera uniquement après MariaDB (sinon il ne pourra pas configurer la base de données...)
+    depends_on: # WordPress démarrera uniquement après MariaDB (sinon il ne pourra pas configurer la base de données...)
     - mariadb
     restart: on-failure
     expose: 
@@ -57,12 +56,12 @@ volumes:
   wordpress:
     driver: local # ici nous stockons le volume en local
     driver_opts:
-      type: 'none' 									# aucun type spécifique
+      type: 'none'  # aucun type spécifique
       o: 'bind'
-      device: '/Users/avaganay/data/wordpress' 		#Ou stocker le dossier sur votre ordinateur en local
+      device: '/Users/avaganay/data/wordpress'  #Ou stocker le dossier sur votre ordinateur en local
   mariadb:
     driver: local
     driver_opts:
       type: 'none' 
-      o: 'bind'										 # Les Bind Mounts sont des volumes qui se montent sur un chemin d'accès à l'hôte, et ils peuvent être modifiés par d'autres processus en dehors de docker.
-      device: '/Users/avaganay/data/mariadb'			#Ou stocker le dossier sur votre ordinateur en local
+      o: 'bind' # Les Bind Mounts sont des volumes qui se montent sur un chemin d'accès à l'hôte, et ils peuvent être modifiés par d'autres processus en dehors de docker.
+      device: '/Users/avaganay/data/mariadb'  #Ou stocker le dossier sur votre ordinateur en local
