--- a/srcs/Docker-compose.yml
+++ b/srcs/Docker-compose.yml
@@ -35,7 +35,7 @@ services:
   wordpress:
     container_name: wordpress
     volumes:
-    - wordpress:/Users/avaganay/data/wordpress:/var/www/wordpress
+    - /Users/avaganay/data/wordpress:/var/www/wordpress
     networks:
     - inception
     build: 
