add RUN mkdir /users/.../mariadb

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -14,6 +14,8 @@ COPY tools/mariadb.sh /mariadb.sh
 
 RUN chmod +x /mariadb.sh
 
+RUN mkdir -p /Users/avaganay/data/mariadb
+
 ENTRYPOINT ["/mariadb.sh"]
     
 EXPOSE 3306
