rm :rw on volume mariadb

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -37,4 +37,4 @@ ENTRYPOINT ["/usr/local/bin/CLI_config.sh"]
 
 EXPOSE 9000
 
-# CMD ["/usr/sbin/php-fpm7.3", "-F"]
+CMD ["/usr/sbin/php-fpm7.3", "-F"]
