--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,24 +1,28 @@
-FROM debian:buster
+FROM mariadb:latest
 
-RUN apt-get update -y
-RUN apt-get upgrade -y
-
-RUN apt update && \
-    apt install dumb-init curl less -y
-
-RUN apt update && \
-    apt install -y mariadb-server
-
-
-COPY tools/mariadb.sh /mariadb.sh
-
-RUN chmod +x /mariadb.sh
-
-RUN mkdir -p /Users/avaganay/data/mariadb
-
-ENTRYPOINT ["/mariadb.sh"]
-    
 EXPOSE 3306
+
+# FROM debian:buster
+
+# RUN apt-get update -y
+# RUN apt-get upgrade -y
+
+# RUN apt update && \
+#     apt install dumb-init curl less -y
+
+# RUN apt update && \
+#     apt install -y mariadb-server
+
+
+# COPY tools/mariadb.sh /mariadb.sh
+
+# RUN chmod +x /mariadb.sh
+
+# RUN mkdir -p /Users/avaganay/data/mariadb
+
+# ENTRYPOINT ["/mariadb.sh"]
+    
+# EXPOSE 3306
 
 
 # Utilisation de l'image officielle de MariaDB depuis Docker Hub
