--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -7,7 +7,11 @@ http
 {
     server
     {
-        listen 443 ssl;
+        listen 443 ssl http2 default_server;
+        listen [::]:443 ssl http2 default_server;
+
+
+        # listen 443 ssl;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_certificate /etc/nginx/ssl/inception.crt;
         ssl_certificate_key /etc/nginx/ssl/inception.key;
