--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -41,7 +41,7 @@ services:
     - inception
     build: 
       context: ./requirements/wordpress
-      dockerfile: Dockerfile
+      # dockerfile: Dockerfile
     env_file: .env
     depends_on: # WordPress démarrera uniquement après MariaDB (sinon il ne pourra pas configurer la base de données...)
     - mariadb
