--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -3,12 +3,13 @@ version: '3'
 
 services:
   mariadb:
+    image: mariadb:latest # l'image de base
     container_name: mariadb # Le nom du container, oui vraiment.
     networks:
     - inception # à quel network il appartient
-    build: 
-      context: ./requirements/mariadb # ou se trouve son Dockerfile
-      dockerfile: Dockerfile  # le nom du Dockerfile ?!
+    # build: 
+    #   context: ./requirements/mariadb # ou se trouve son Dockerfile
+    #   dockerfile: Dockerfile  # le nom du Dockerfile ?!
     env_file: .env  # le fichier d'environnement pour transmettre les variables
     volumes:  # Voir plus bas
     - /Users/avaganay/data/mariadb:/var/lib/mysql:rw  # - mariadb:/var/lib/mysql
@@ -33,7 +34,7 @@ services:
     restart: on-failure # Ici nous changeons, le container redémarrera uniquement en cas de crash.
 
   wordpress:
-    image: wordpress:latest
+    # image: wordpress:latest
     container_name: wordpress
     volumes:
     - /Users/avaganay/data/wordpress:/var/www/wordpress
@@ -41,7 +42,7 @@ services:
     - inception
     build: 
       context: ./requirements/wordpress
-      # dockerfile: Dockerfile
+      dockerfile: Dockerfile
     env_file: .env
     depends_on: # WordPress démarrera uniquement après MariaDB (sinon il ne pourra pas configurer la base de données...)
     - mariadb
