--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -106,7 +106,7 @@ services:
     image: nginx:latest
     container_name: mon-nginx
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx.conf/etc/nginx/conf.d/nginx.conf
       - ./html:/usr/share/nginx/html
     ports:
       - "80:80"
