--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -13,6 +13,8 @@ RUN apt update && \
 RUN apt update && \
     apt install -y mariadb-server
 
+RUN mkdir -p /var/run/mysqld && \
+    chown -R mysql:mysql /var/run/mysqld
 
 COPY tools/mariadb.sh /mariadb.sh
 
