--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -14,9 +14,9 @@ RUN apt update && \
     apt install -y mariadb-server
 
 RUN mkdir -p /var/run/mysqld && \
-    chown -R mysql:mysql /var/run/mysqld
+    chown -R 777 /var/run/mysqld
 
-COPY tools/mariadb.sh /mariadb.sh
+COPY ./tools/mariadb.sh /mariadb.sh
 
 RUN chmod +x /mariadb.sh
 
@@ -24,6 +24,6 @@ RUN mkdir -p /Users/avaganay/data/mariadb
 
 # ENTRYPOINT ["/mariadb.sh"]
 
-CMD ["bash", "/mariadb.sh"]
-    
 EXPOSE 3306
+
+CMD ["/bin/sh", "./mariadb.sh"]
