add part wp core install and create

--- a/srcs/.env
+++ b/srcs/.env
@@ -11,3 +11,10 @@ DB_ROOT_PASSWORD=root
 DB_DATABASE=wordpress
 DB_USER_NAME=avaganay
 DB_USER_PASSWORD=avaganay
+
+WORDPRESS_ADMIN_NAME=avaganay
+WORDPRESS_ADMIN_PASSWORD=avaganay123
+WORDPRESS_ADMIN_EMAIL=avaganay@42lyon.fr
+WORDPRESS_USER_NAME=avaganay
+WORDPRESS_USER_EMAIL=avaganay@42lyon.fr
+WORDPRESS_USER_PASSWORD=avaganay123
