--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -3,12 +3,13 @@ version: '3'
 
 services:
   mariadb:
+    image: mariadb:latest # l'image à utiliser
     container_name: mariadb # Le nom du container, oui vraiment.
     networks:
     - inception # à quel network il appartient
-    build: 
-      context: ./requirements/mariadb # ou se trouve son Dockerfile
-      dockerfile: Dockerfile  # le nom du Dockerfile ?!
+    # build: 
+    #   context: ./requirements/mariadb # ou se trouve son Dockerfile
+    #   dockerfile: Dockerfile  # le nom du Dockerfile ?!
     env_file: .env  # le fichier d'environnement pour transmettre les variables
     volumes:  # Voir plus bas
     - /Users/avaganay/data/mariadb:/var/lib/mysql:rw  # - mariadb:/var/lib/mysql
