--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     #   dockerfile: Dockerfile  # le nom du Dockerfile ?!
     env_file: .env  # le fichier d'environnement pour transmettre les variables
     volumes:  # Voir plus bas
-    - /Users/avaganay/data/mariadb:/var/lib/mysql:rw  # - mariadb:/var/lib/mysql
+    - /Users/avaganay/data/mariadb:/var/lib/mysql  # - mariadb:/var/lib/mysql
     restart: unless-stopped # redémarre tant qu'il n'est pas stoppé 
     ports: # le port à exposer
     - "3306"
@@ -61,11 +61,11 @@ volumes:
       o: 'bind'
       device: '/Users/avaganay/data/wordpress'  #Ou stocker le dossier sur votre ordinateur en local
   mariadb:
-    driver: local
-    driver_opts:
-      type: 'none' 
-      o: 'bind' # Les Bind Mounts sont des volumes qui se montent sur un chemin d'accès à l'hôte, et ils peuvent être modifiés par d'autres processus en dehors de docker.
-      device: '/Users/avaganay/data/mariadb'  #Ou stocker le dossier sur votre ordinateur en local
+  #   driver: local
+  #   driver_opts:
+  #     type: 'none' 
+  #     o: 'bind' # Les Bind Mounts sont des volumes qui se montent sur un chemin d'accès à l'hôte, et ils peuvent être modifiés par d'autres processus en dehors de docker.
+  #     device: '/Users/avaganay/data/mariadb'  #Ou stocker le dossier sur votre ordinateur en local
 
 # version: '3'
 
