--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -40,6 +40,9 @@ services:
     - /Users/avaganay/data/wordpress:/var/www/html
     networks:
     - inception
+    # build: 
+    #   context: ./requirements/wordpress
+    #   dockerfile: Dockerfile
     env_file: .env
     depends_on: # WordPress démarrera uniquement après MariaDB (sinon il ne pourra pas configurer la base de données...)
     - mariadb
