--- a/srcs/requirements/mariadb/conf/mariadb.conf
+++ b/srcs/requirements/mariadb/conf/mariadb.conf
@@ -1,9 +1,29 @@
-# Pour indiquer le type de la configuration du fichier
+[client-server]
+
+# Include additional configuration files from these directories
+# !includedir /etc/mysql/conf.d/
+# !includedir /etc/mysql/mariadb.conf.d/
+
 [mysqld]
 
+# Set the data directory where MariaDB stores its databases
 datadir = /var/lib/mysql
-socket  = /run/mysqld/mysqld.sock
-# Toutes les IP du réseau peuvent se connecter
-bind_address=*   # =XXX.XXX.XX.XX
+
+# Allow connections from any IP address
+bind_address = *
+
+# Set the port for MariaDB to listen on
 port = 3306
+
+# Set the MariaDB user
 user = mysql
+
+# # Pour indiquer le type de la configuration du fichier
+# [mysqld]
+
+# datadir = /var/lib/mysql
+# socket  = /run/mysqld/mysqld.sock
+# # Toutes les IP du réseau peuvent se connecter
+# bind_address=*   # =XXX.XXX.XX.XX
+# port = 3306
+# user = mysql
