--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,54 +1,79 @@
+server {
 
-events {
-    worker_connections 1024;
-}
+    listen 443 ssl http2 default_server;
+    listen [::]:443 ssl http2 default_server;
 
-http
-{
-    server
-    {
+    root	/var/www/html;
+	index   index.php;
 
-        listen 443 ssl;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_certificate /etc/nginx/ssl/inception.crt;
-        ssl_certificate_key /etc/nginx/ssl/inception.key;
-        
-        #indique que la connection sera fait depuis cet host
-        server_name avaganay.42.fr;
+    ssl_protocols TLSv1.2 TLSv1.3;
 
-        # Définit le répertoire racine pour les fichiers du site web, le dossier ou ils sont stockés
-        root /var/www/html;
-        # Fichiers a afficher
-        index index.php index.html index.htm index.nginx-debian.html;
+    ssl_certificate /etc/ssl/certs/cert_key.crt;
+    ssl_certificate_key /etc/ssl/private/cert_key.key;
 
-        # / est utilisée pour faire correspondre une URL spécifique ou un préfixe d'URL
-        location /
-        {
-            # Pour tous les fichiers, nous essayons d’ouvrir le fichier renseigné, si c’est un échec on envoi 404
-            try_files $uri $uri/ =404;
-        }
+    server_name avaganay.42.fr;
 
-        # ~ est utilisée pour effectuer une correspondance avec une expression régulière sensible à la casse (tout les fichiers qui se termine par .php)
-        location ~ \.php$
-        {
-        #     # include le fichier qui contient des directives FastCGI spécifiques pour le traitement des scripts PHP
-            include snippets/fastcgi-php.conf;
-        #     # comment renvoyer les requetes pho
-            fastcgi_pass wordpress:9000;
-        }
-
+    location / {
+            try_files $uri $uri/ /index.php?$args;
     }
+
+    location ~ \.php$ {								# Pour toutes les requetes php
+            include snippets/fastcgi-php.conf;
+            fastcgi_pass wordpress:9000;				# Comment renvoyer les requetes php sur le port 9000
+        }
 }
 
-# server {
-#     listen 80;
-#     server_name localhost;
 
-#     location / {
-#         proxy_pass http://wordpress;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
+# events {
+#     worker_connections 1024;
+# }
+
+# http
+# {
+#     server
+#     {
+
+#         listen 443 ssl;
+#         ssl_protocols TLSv1.2 TLSv1.3;
+#         ssl_certificate /etc/nginx/ssl/inception.crt;
+#         ssl_certificate_key /etc/nginx/ssl/inception.key;
+        
+#         #indique que la connection sera fait depuis cet host
+#         server_name avaganay.42.fr;
+
+#         # Définit le répertoire racine pour les fichiers du site web, le dossier ou ils sont stockés
+#         root /var/www/html;
+#         # Fichiers a afficher
+#         index index.php index.html index.htm index.nginx-debian.html;
+
+#         # / est utilisée pour faire correspondre une URL spécifique ou un préfixe d'URL
+#         location /
+#         {
+#             # Pour tous les fichiers, nous essayons d’ouvrir le fichier renseigné, si c’est un échec on envoi 404
+#             try_files $uri $uri/ =404;
+#         }
+
+#         # ~ est utilisée pour effectuer une correspondance avec une expression régulière sensible à la casse (tout les fichiers qui se termine par .php)
+#         location ~ \.php$
+#         {
+#         #     # include le fichier qui contient des directives FastCGI spécifiques pour le traitement des scripts PHP
+#             include snippets/fastcgi-php.conf;
+#         #     # comment renvoyer les requetes pho
+#             fastcgi_pass wordpress:9000;
+#         }
+
 #     }
 # }
+
+# # server {
+# #     listen 80;
+# #     server_name localhost;
+
+# #     location / {
+# #         proxy_pass http://wordpress;
+# #         proxy_set_header Host $host;
+# #         proxy_set_header X-Real-IP $remote_addr;
+# #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+# #         proxy_set_header X-Forwarded-Proto $scheme;
+# #     }
+# # }
