--- a/srcs/.env
+++ b/srcs/.env
@@ -7,7 +7,7 @@ MYSQL_USER=avaganay
 MYSQL_PASSWORD=avaganay123
 MYSQL_DATABASE=wordpress
 
-DB_ROOT_PASSWORD=root
+DB_ROOT_PASSWORD=avaganay123
 DB_DATABASE=wordpress
 DB_USER_NAME=avaganay
 DB_USER_PASSWORD=avaganay
@@ -18,3 +18,4 @@ WORDPRESS_ADMIN_EMAIL=avaganay@42lyon.fr
 WORDPRESS_USER_NAME=avaganay
 WORDPRESS_USER_EMAIL=avaganay@42lyon.fr
 WORDPRESS_USER_PASSWORD=avaganay123
+WORDPRESS_DB_HOST=avaganay
