--- a/srcs/.env
+++ b/srcs/.env
@@ -18,4 +18,4 @@ WORDPRESS_ADMIN_EMAIL=avaganay@42lyon.fr
 WORDPRESS_USER_NAME=avaganay
 WORDPRESS_USER_EMAIL=avaganay@42lyon.fr
 WORDPRESS_USER_PASSWORD=avaganay123
-WORDPRESS_DB_HOST=avaganay
+WORDPRESS_DB_HOST=mariadb:3306
