--- a/srcs/.env
+++ b/srcs/.env
@@ -18,4 +18,8 @@ WORDPRESS_ADMIN_EMAIL=avaganay@42lyon.fr
 WORDPRESS_USER_NAME=avaganay
 WORDPRESS_USER_EMAIL=avaganay@42lyon.fr
 WORDPRESS_USER_PASSWORD=avaganay123
+WORDPRESS_USER_DISPLAY=avaganay
 WORDPRESS_DB_HOST=mariadb:3306
+WORDPRESS_DB_NAME=avaganay
+WORDPRESS_DB_USER=avaganay
+WORDPRESS_DB_USER_PASS=avaganay
