--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -31,7 +31,9 @@ EXPOSE 9000
 COPY ./tools/wp_setup.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/wp_setup.sh
 
-ENTRYPOINT ["/usr/local/bin/wp_setup.sh"]
+# ENTRYPOINT ["/usr/local/bin/wp_setup.sh"]
+
+CMD ["/bin/sh", "/usr/local/bin/wp_setup.sh" ]
 
 # FROM debian:buster
 
