--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -61,15 +61,16 @@ server {
     # / est utilisée pour faire correspondre une URL spécifique ou un préfixe d'URL
     location /
     {
-            try_files $uri $uri/ /index.php?$args;
+        try_files $uri $uri/ /index.php?$args;
     }
 
     # ~ est utilisée pour effectuer une correspondance avec une expression régulière sensible à la casse (tout les fichiers qui se termine par .php)
     location ~ \.php$
     {
-            include snippets/fastcgi-php.conf;
-            # comment renvoyer les requetes php
-            fastcgi_pass wordpress:9000;
+        # include le fichier qui contient des directives FastCGI spécifiques pour le traitement des scripts PHP
+        include snippets/fastcgi-php.conf;
+        # comment renvoyer les requetes php
+        fastcgi_pass wordpress:9000;
     }
 }
 
