--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -39,7 +39,7 @@
 
 FROM debian:buster
 
-RUN sleep 10
+# RUN sleep 10
 
 RUN apt-get update && \
     apt-get install -y mariadb-client php-fpm php-mysql php-curl php-dom \
