try fix error atro

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -42,8 +42,8 @@
 
 server {
 
-    listen 443 ssl;
-    listen [::]:443 ssl;
+    listen 443 ssl http2 default_server;
+    listen [::]:443 ssl http2 default_server;
 
     # Définit le répertoire racine pour les fichiers du site web, le dossier ou ils sont stockés
     root	/var/www/html;
@@ -61,7 +61,7 @@ server {
     # / est utilisée pour faire correspondre une URL spécifique ou un préfixe d'URL
     location /
     {
-        try_files $uri $uri/ =404;
+        try_files $uri $uri/ /index.php?$args;
     }
 
     # ~ est utilisée pour effectuer une correspondance avec une expression régulière sensible à la casse (tout les fichiers qui se termine par .php)
