--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -32,13 +32,12 @@ RUN apt-get update && apt-get install -y \
      nginx
 RUN apt install openssl -y
 
+COPY ./conf/nginx.conf  /etc/nginx/sites-available/default
 
 RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
      -keyout /etc/ssl/private/cert_key.key \
      -out /etc/ssl/certs/cert_key.crt \
-     -subj "/C=FR/ST=RHONE/L=LYON/O=42 Lyon/OU=42/CN=avaganay.42.fr/UID=avaganay"
-
-COPY ./conf/nginx.conf  /etc/nginx/sites-available/default
+     -subj "/C=FR/ST=RHONE/L=LYON/O=42 Lyon/OU=42/CN=jlaisne.42.fr/UID=jlaisne"
 
 RUN chmod 777 -R /var/www/html
 # RUN chown -R www-data:www-data /var/www/html
