--- a/srcs/.env
+++ b/srcs/.env
@@ -1,25 +1,24 @@
-DOMAIN_NAME=avaganay.42.fr
-# certificates
-CERTS_=./XXXXXXXXXXXX
-# MYSQL SETUP
-MYSQL_ROOT_PASSWORD=avaganay123
-MYSQL_USER=avaganay
-MYSQL_PASSWORD=avaganay123
-MYSQL_DATABASE=wordpress
-
-DB_ROOT_PASSWORD=avaganay123
-DB_DATABASE=wordpress
-DB_USER_NAME=avaganay
-DB_USER_PASSWORD=avaganay
-
-WORDPRESS_ADMIN_NAME=avaganay
-WORDPRESS_ADMIN_PASSWORD=avaganay123
-WORDPRESS_ADMIN_EMAIL=avaganay@42lyon.fr
-WORDPRESS_USER_NAME=avaganay
-WORDPRESS_USER_EMAIL=avaganay@42lyon.fr
-WORDPRESS_USER_PASSWORD=avaganay123
-WORDPRESS_USER_DISPLAY=avaganay
+#-----------------------WORDPRESS---------------------#
 WORDPRESS_DB_HOST=mariadb:3306
-WORDPRESS_DB_NAME=avaganay
-WORDPRESS_DB_USER=avaganay
-WORDPRESS_DB_USER_PASS=avaganay
+
+WORDPRESS_ADMIN_NAME=inception
+WORDPRESS_ADMIN_PASSWORD=inception
+WORDPRESS_ADMIN_EMAIL=inception@42lyon.fr
+
+WORDPRESS_USER_NAME=user1
+WORDPRESS_USER_PASSWORD=user1
+WORDPRESS_USER_EMAIL=user@42lyon.fr
+
+MYSQL_DATABASE=inception
+MYSQL_USER=inception
+MYSQL_PASSWORD=inception
+#-----------------------MARIADB-----------------------#
+
+SQL_USER=inception
+SQL_PASSWORD=inception
+
+SQL_DATABASE=inception
+SQL_ROOT_PASSWORD=inception
+
+#-----------------------NGNIX-------------------------#
+DOMAIN_NAME=lcompieg.42.fr
